--- a/Card Game/Base.lproj/Main.storyboard
+++ b/Card Game/Base.lproj/Main.storyboard
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="fpe-M1-vRl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="nLV-R8-0nS">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--Set-->
         <scene sceneID="msV-Pr-HKB">
             <objects>
-                <viewController id="08E-fA-w8f" customClass="SetCardGameViewController" sceneMemberID="viewController">
+                <viewController title="Set" id="08E-fA-w8f" customClass="SetCardGameViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="iQe-xG-DJJ"/>
                         <viewControllerLayoutGuide type="bottom" id="5cr-7O-hSy"/>
@@ -311,10 +311,10 @@
             </objects>
             <point key="canvasLocation" x="1732" y="849"/>
         </scene>
-        <!--Item-->
+        <!--Match-->
         <scene sceneID="Ovc-jJ-VaR">
             <objects>
-                <viewController id="qyr-yd-Omw" customClass="PlayingCardGameViewController" sceneMemberID="viewController">
+                <viewController title="Match" id="qyr-yd-Omw" customClass="PlayingCardGameViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="tFk-93-mi5"/>
                         <viewControllerLayoutGuide type="bottom" id="kLn-iG-x2O"/>
